# HomeAutomation

./: .gitignore  Cargo.toml  LICENSE.md  README.md  deny.toml  deploy.sh  deploy_all.sh  deploy_optimized.sh  flake.nix
arduinoCpp/: Makefile  (+6 more)
crates/brain/: Cargo.toml  deploy.sh  deploy_optimized.sh  profile.sh  test.sh
crates/brain/src/: errors.rs  main.rs  system.rs  time.rs
crates/brain/src/controller/: mod.rs  rooms.rs
crates/brain/src/input/: api.rs  jobs.rs  mod.rs  mpd_status.rs  sensors.rs
crates/brain/src/system/: mpd_control.rs
crates/brain/web/: set_alarm.html  websocket.html  websocket_getData2.html
crates/data-server/: Cargo.toml  deploy.sh
crates/data-server/src/: api.rs  lib.rs  main.rs  server.rs  subscribe.rs  subscriber.rs
crates/data-server/src/api/: client.rs  data_source.rs  subscriber.rs
crates/data-server/src/server/: affector.rs  client.rs  data_source.rs  subscribe.rs  watch.rs
crates/data-server/src/subscriber/: reconnecting.rs
crates/data-server/tests/: api.rs  pir-status.rs  source_api.rs  subscriber_api.rs
crates/data-store/: Cargo.toml  deploy.sh  test.sh  test_import_export.sh  update_data.sh
crates/data-store/examples/: last_15m.rs
crates/data-store/src/: api.rs  data.rs  export.rs  import.rs  lib.rs  main.rs  server.rs
crates/data-store/src/api/: client.rs
crates/data-store/src/data/: series.rs
crates/data-store/src/export/: csv.rs  decoder.rs
crates/data-store/src/server/: clients.rs  db.rs
crates/data-store/tests/: list_data.rs
crates/data_server/: Cargo.toml  deploy.sh
crates/data_server/src/: main.rs
crates/desk-sensors/: Cargo.toml  deploy.sh  desk-sensors.service
crates/desk-sensors/src/: bedroom.rs  buttons.rs  main.rs  sensors.rs
crates/log-store/: Cargo.toml  deploy.sh
crates/log-store/.cargo/: config.toml
crates/log-store/src/: api.rs  main.rs  server.rs
crates/log-store/src/api/: client.rs
crates/log-store/src/server/: clients.rs  db.rs
crates/log-store/tests/: list_data.rs
crates/logger/: Cargo.toml
crates/logger/examples/: log.rs
crates/logger/src/: lib.rs  ratelimited.rs  tracing.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: affector.rs  button.rs  device.rs  downcast_err.rs  error.rs  error_tomato.rs  extended_errors.rs  large_bedroom.rs  lib.rs  msg.rs  pir.rs  reading.rs  reading_tree.rs  shared.rs  small_bedroom.rs  tomato.rs  usb.rs
crates/protocol/src/affector/: tree.rs
crates/protocol/src/downcast_err/: i2c.rs  rpi_button.rs  uart.rs
crates/protocol/src/large_bedroom/: airbox.rs  bed.rs  desk.rs  desk_right.rs  radiator.rs
crates/protocol/src/msg/: error.rs  sensor.rs
crates/protocol/src/reading/: tree.rs
crates/protocol/src/shared/: radiator.rs
crates/protocol/src/small_bedroom/: bed.rs  desk.rs  portable_button_panel.rs  radiator.rs
crates/radiator-bridge/: Cargo.toml  deploy.sh  profile.sh  test.sh
crates/radiator-bridge/.cargo/: config.toml
crates/radiator-bridge/src/: main.rs
crates/rpc/: Cargo.toml
crates/rpc/src/: client.rs  lib.rs  server.rs
crates/sensor-tui/: Cargo.toml
crates/sensor-tui/examples/: chart_gaps.rs
crates/sensor-tui/src/: control.rs  fetch.rs  lib.rs  main.rs  populate.rs  receive.rs  tui.rs
crates/sensor-tui/src/time/: format.rs  parse.rs
crates/sensor-tui/src/tui/: affectors.rs  history_len.rs  reading.rs  readings.rs  render.rs  reports.rs
crates/sensor_tui/: Cargo.toml
crates/sensor_tui/src/: main.rs  tui.rs
crates/sensor_tui/src/tui/: reading.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/server/src/tui/: render.rs
crates/system/: Cargo.toml
crates/system/src/: main.rs
crates/system/src/controller/: commands.rs  mod.rs
crates/system/src/input/: api.rs  jobs.rs
crates/system/web/: graph.html  login.html  set_alarm.html  test.html  websocket_getData.html
crates/text-widget/: Cargo.toml  deploy.sh
crates/text-widget/src/: cache.rs  main.rs  resolve.rs
crates/text-widget/src/resolve/: fetch.rs
crates/ui/: Cargo.toml
crates/ui/examples/: chart_gaps.rs
crates/ui/src/: control.rs  main.rs  populate.rs  receive.rs
crates/ui/src/tui/: readings.rs  reports.rs
crates/usb-bridge/: Cargo.toml  deploy.sh  usb-bridge.rules  usb-bridge.service
crates/usb-bridge/src/: main.rs  usb.rs
crates/usb-bridge/src/usb/: device.rs
crates/zigbee-bridge/: Cargo.toml
crates/zigbee-bridge/examples/: change_fridge_light.rs  change_radiator_reference.rs  change_radiator_set_point.rs
crates/zigbee-bridge/src/: cached_bridge.rs  conversion.rs  device.rs  lamp.rs  lib.rs  lights.rs  parse.rs  parse_state.rs  radiator.rs  tests.rs
crates/zigbee-bridge/src/cached_bridge/: changes.rs  mqtt.rs  poll.rs
crates/zigbee-bridge/src/lamp/: color_correction.rs  model.rs  property.rs
crates/zigbee-bridge/src/lights/: cached_bridge.rs  conversion.rs  lamp.rs  parse_state.rs  state.rs
nodes/embassy/bed-sb/: Cargo.toml
nodes/embassy/bed-sb/src/: channel.rs  main.rs  sensors.rs
nodes/embassy/large-bedroom-bed/: Cargo.toml
nodes/embassy/large-bedroom-bed/.cargo/: config.toml
nodes/embassy/large-bedroom-bed/src/: main.rs  sensors.rs
nodes/embassy/large-bedroom-desk/: Cargo.toml
nodes/embassy/sensors/: Cargo.toml
nodes/embassy/usb-bridge-client/: Cargo.toml
nodes/esp32/airbox/: Cargo.toml
sensor-nodes/: Cargo.toml  setup.sh
sensor-nodes/bed-lb/: Cargo.toml
sensor-nodes/bed-lb/src/: main.rs  network.rs  sensors.rs
sensor-nodes/bed-sb/: Cargo.toml
sensor-nodes/bed-sb/host/: Cargo.toml
sensor-nodes/bed-sb/schema/: Cargo.toml
sensor-nodes/bed-sb/src/: channel.rs  comms.rs  error_cache.rs  main.rs  reset_on_error_i2c.rs  sensors.rs  usb_wrapper.rs
sensor-nodes/bed-sensors/: Cargo.toml
sensor-nodes/bed-sensors/.cargo/: config.toml
sensor-nodes/bed-sensors/src/: channel.rs  error_cache.rs  main.rs  network.rs  rgb_led.rs  rng.rs  sensors.rs
sensor-nodes/bed_lb/: Cargo.toml
sensor-nodes/bed_lb/src/: main.rs  rng.rs  sensors.rs
sensor-nodes/sensors/: Cargo.toml
sensor-nodes/sensors/src/: drivers.rs  errors.rs  lib.rs  measurements.rs
(+501 files in other folders)
