[workspace]
resolver = "2"
members = ["crates/*"]
exclude = ["sensor-nodes/bed-lb", "sensor-nodes/bed-sb"]

[workspace.dependencies]
data-server = { path = "crates/data-server" }
data-store = { path = "crates/data-store" }
log-store = { path = "crates/log-store" }
protocol = { path = "crates/protocol" }
zigbee-bridge = { path = "crates/zigbee-bridge" }
rpc = { path = "crates/rpc" }
logger = { path = "crates/logger" }

byteseries = { git = "https://github.com/dvdsk/byteseries", rev="325c7823aa2d04bba85d0346077fe999e789f3c9" }

serde = { version = "1", features = ["derive"], default-features = false }
tokio = { version = "1.38", features = ["rt-multi-thread"] }
governor = "0.8"
color-eyre = "0.6.3"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
futures = "0.3.31"
futures-concurrency = "7.6.2"
jiff = "0.1"
clap = { version = "4", features = ["derive"]} 
thiserror = "2"

[workspace.package]
rust-version = "1.82"
edition = "2021"
license = "GPLv3"
authors = ["David Kleingeld & Eva van Houten"]

[profile.release-with-debug]
inherits = "release"
debug = true
