[workspace]
resolver = "2"
members = ["bed-sb", "bed-lb", "sensors"]

[workspace.dependencies]
protocol = { path = "../crates/protocol" }

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"

embassy-stm32 = { version = "0.1.0", features = [ "defmt", "stm32f401cc",
"unstable-pac", "memory-x", "time-driver-tim9", "time", "exti" ]  }
embassy-net = { version = "0.5.0", features = ["defmt", "proto-ipv4", "tcp", "dhcpv4","medium-ethernet"] }
embassy-net-wiznet = { version = "0.1.0", features = ["defmt"] }
embassy-sync = { version = "0.6.1", features = ["defmt"] }
embassy-executor = { version = "0.7", features = ["arch-cortex-m",
"executor-thread", "defmt", "executor-interrupt"] }
embassy-embedded-hal = { version = "0.2.0" }
embassy-time = { version = "0.4", features = ["defmt",
"defmt-timestamp-uptime-ms", "tick-hz-32_768"] }
embassy-futures = { version = "0.1.1"}

embedded-hal = "1.0.0"
embedded-hal-async = "1.0"
embedded-hal-bus = { version = "0.2", features = ["async", "defmt-03"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
futures = { version = "0.3.31", default-features = false, features = ["async-await"] }

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

[patch.crates-io]
embassy-stm32 = {git = "https://github.com/embassy-rs/embassy", rev = "a4f8fdd" }
embassy-net = {git = "https://github.com/embassy-rs/embassy", rev = "a4f8fdd" }
embassy-net-wiznet = {git = "https://github.com/embassy-rs/embassy", rev = "a4f8fdd" }
embassy-sync = {git = "https://github.com/embassy-rs/embassy", rev = "a4f8fdd" }
embassy-executor = {git = "https://github.com/embassy-rs/embassy", rev = "a4f8fdd" }
embassy-embedded-hal = {git = "https://github.com/embassy-rs/embassy", rev = "a4f8fdd" }
embassy-futures = {git = "https://github.com/embassy-rs/embassy", rev = "a4f8fdd" }
embassy-time = {git = "https://github.com/embassy-rs/embassy", rev = "a4f8fdd" }
embassy-time-driver = {git = "https://github.com/embassy-rs/embassy", rev = "a4f8fdd" }
embassy-usb = {git = "https://github.com/embassy-rs/embassy", rev = "a4f8fdd" }

[workspace.package]
rust-version = "1.78"
edition = "2021"
license = "GPLv3"
authors = ["David Kleingeld & Eva van Houten"]

[profile.dev]
opt-level = "s"

[profile.release]
lto = "fat"
opt-level = "s"
incremental = false
codegen-units = 1
# note: debug = true is okay - debuginfo isn't flashed to the device!
debug = true
