[package]
name = "brain"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
protocol = { workspace = true, features = ["alloc"] }
data-server = { workspace = true }

futures = "0.3"
tokio = { workspace = true, features = ["full"] }
axum = { version = "0.7.4", default-features = false, features = ["tokio", "http1"] }
axum-macros = "0.4.1"

hueclient = { git = "https://github.com/dvdsk/hue.rs"}

serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
bincode = "1.3"

thiserror = "1.0"

chrono = { version = "0.4", features = ["serde"] }
time = { workspace = true, features = ["macros"] }
tz-rs = "0.6.14"

bytes = "1.5"
byteorder = "1.4"

sled = "0.34"

mpd = "0.1"
rand = "0.8"

futures-util = "0.3.30"
tracing = {workspace = true}
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-journald = "0.3.0"
clap = { version = "4.5.4", features = ["derive"] }
futures-concurrency = "7.5.0"
strum = { version = "0.26.2", default-features = false, features = ["derive"] }
