[package]
name = "brain"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
protocol = { workspace = true, features = ["alloc"] }
data-server = { workspace = true }
zigbee-bridge = { workspace = true }

futures.workspace = true
tokio = { workspace = true, features = ["full"] }

serde.workspace = true
serde_yaml = "0.9"
bincode = "1.3"

thiserror.workspace = true

jiff = { workspace = true, features = ["serde"] }

bytes = "1.5"
byteorder = "1.4"

sled = "0.34"

mpd = "0.1"
rand = "0.8"

futures-util = "0.3.30"
tracing = {workspace = true}
logger.workspace = true
clap = { workspace = true }
futures-concurrency = { workspace = true }
strum = { version = "0.26.2", default-features = false, features = ["derive"] }
dbstruct = { git = "https://github.com/dvdsk/dbstruct" }
color-eyre.workspace = true
mpdrs = "0.1.0"
