[package]
name = "brain"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
protocol = { workspace = true, features = ["alloc"] }
data-server = { workspace = true }
zigbee-bridge = { workspace = true }

futures.workspace = true
tokio = { workspace = true, features = ["full"] }

serde.workspace = true
serde_yaml = "0.9"

thiserror.workspace = true

jiff = { workspace = true, features = ["serde"] }

sled = "0.34"

mpd = "0.1"
rand.workspace = true

futures-util = "0.3.30"
tracing = {workspace = true}
logger.workspace = true
clap = { workspace = true }
futures-concurrency = { workspace = true }
# dbstruct = { git = "https://github.com/dvdsk/dbstruct" }
dbstruct = { path = "/home/david/Documents/dbstruct" }
color-eyre.workspace = true
mpdrs = "0.1.0"
