[package]
name = "data-server"
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
api = []
server = []
default = ["api", "server"]

[dependencies]
clap = { workspace = true }
color-eyre = { workspace = true }
tracing = { workspace = true }
tracing-error = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

protocol = { workspace = true, features = ["alloc", "thiserror"] }
tokio = { workspace = true, features = ["rt", "macros", "net", "sync", "io-util"] }
tokio-stream = { version = "0.1.15", features = ["net"] }
thiserror = "1.0.61"

[dev-dependencies]
reserve-port = "2"
