[package]
name = "data-store"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
api = []
server = []
default = ["api", "server"]

[dependencies]
clap = { workspace = true }
color-eyre = { workspace = true }
logger.workspace = true
tracing = { workspace = true }
tracing-error = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
jiff = { workspace =true, features = ["serde"] }
rpc = { workspace = true }

protocol = { workspace = true, features = ["alloc", "thiserror"] }
data-server = { workspace = true }

byteseries = { workspace = true }
tokio = { workspace = true, features = ["fs", "net", "rt-multi-thread", "sync"] }
futures-concurrency = { workspace = true }
serde.workspace = true
thiserror = { workspace = true }
futures.workspace = true
smallvec = "2.0.0-alpha.6"
num = "0.4.3"
ron = "0.8.1"

[dev-dependencies]
futures-concurrency = { workspace = true }
nucleo-matcher = "0.3.1"
reserve-port = "2.0.1"
temp-dir = "0.1.13"
