[package]
name = "desk-sensors"
version = "0.2.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
linux-embedded-hal = "0.4"
gpiocdev-embedded-hal = { version = "0.1.1", features = ["async_tokio"] }
bme280 = { version = "0.5", git = "https://github.com/dvdsk/bme280-rs", features = ["postcard", "serde", "with_std"] }

clap = { version = "4.5.4", features = ["derive"] }
color-eyre = "0.6.3"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-error = "0.2.0"

protocol = { path = "../protocol", features = ["alloc"] }
tokio = { version = "1.37.0", features = ["rt", "time", "macros"] }
embedded-hal-async = "1.0.0"
