[package]
name = "log-store"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
api = []
server = []
default = ["api", "server"]

[dependencies]
clap = { workspace = true }
color-eyre = { workspace = true }
logger = { workspace = true }
tracing = { workspace = true }
tracing-error = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
jiff = { workspace =true, features = ["serde"] }

protocol = { workspace = true, features = ["alloc", "thiserror"] }
data-server = { workspace = true }
byteseries = { workspace = true }
rpc = { workspace = true }

tokio = { workspace = true, features = ["fs", "net", "rt-multi-thread", "sync"] }
futures-concurrency = { workspace = true }
serde.workspace = true
bincode = "1.3.3"
thiserror = { workspace = true }
futures.workspace = true
smallvec = "2.0.0-alpha.6"
hdrhistogram = "7.5.4"
derivative = "2.2.0"

[dev-dependencies]
futures-concurrency = { workspace = true }
heapless = "0.8.0"
nucleo-matcher = "0.3.1"
reserve-port = "2.0.1"
temp-dir = "0.1.13"
