[package]
name = "protocol"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"], default-features = false }
postcard = { version = "1.0.10", features = ["experimental-derive", "use-defmt"] }
heapless = { version = "0.8.0", features = ["serde", "defmt-03"] }
strum = { version = "0.26.2", default-features = false, features = ["derive"] }
thiserror = { workspace = true, optional = true }
defmt = "0.3.6"

[features]
alloc = ["postcard/alloc", "serde/std"]
