[package]
name = "rpc"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
color-eyre.workspace = true
futures.workspace = true
governor.workspace = true
tokio = { workspace = true, features = ["net", "rt", "sync", "time"] }
tokio-util.workspace = true
tracing.workspace = true

serde.workspace = true
tokio-serde = { version = "0.9.0", features = ["bincode"] }
thiserror.workspace = true
