[package]
name = "sensor-tui"
edition.workspace = true
license.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = { workspace = true }
crossterm = "0.27.0"
histogram = "0.11"
ratatui = "0.27"
tui-tree-widget = { version = "0.21.0", git = "https://github.com/dvdsk/tui-rs-tree-widget" }

tokio =  { workspace = true}
tracing = {workspace = true}
tracing-error = { workspace = true }
tracing-subscriber = { workspace =true, features = ["env-filter"] }

protocol = { workspace = true, features = ["alloc"] }
data-server = { workspace = true }
data-store = { workspace = true }
time = { workspace = true }
