[package]
name = "sensor-tui"
edition.workspace = true
license.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = { workspace = true }
crossterm = "0.28"
hdrhistogram = "7.5"
ratatui = "0.28"
tui-tree-widget = { version = "0.22.0", git = "https://github.com/dvdsk/tui-rs-tree-widget" }
clap = { workspace = true }

tokio =  { workspace = true}
tracing.workspace = true
tracing-error = { workspace = true }
tracing-subscriber.workspace = true 

protocol = { workspace = true, features = ["alloc"] }
data-server = { workspace = true }
data-store = { workspace = true }
log-store = { workspace = true, features = ["api"] }
jiff = { workspace = true }
thiserror.workspace = true
itertools = "0.13.0"
gethostname = "0.5.0"
