[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.27.0"
histogram = "0.10.1"
protocol = { path = "/home/david/Documents/HomeAutomation/crates/protocol" }
ratatui = "0.26.2"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
