[package]
name = "ha"
version = "0.1.0"
authors = ["David Kleingeld <dskleingeld@gmail.com>"]
edition = "2021"

[features]
default = []

# Enable code that expects sensor hardware to be present. Will stop execution
# if hardware is not present,
# on by default for testing use cargo flag: --no-default-features
sensors_connected = []
live_server = []

[dependencies]
protocol = { path = "../protocol" }

futures = "0.3"
tokio = { version = "1", features = ["full"] }
axum = "0.7.4"
axum-macros = "0.4.1"

philipshue = { git = "https://github.com/dvdsk/philipshue", branch = "master" }

serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
bincode = "1.3"

thiserror = "1.0"

sensor_value = { git = "https://github.com/dskleingeld/sensor_central.git", branch = "main" }

chrono = { version = "0.4", features = ["serde"] }
bytes = "0.4"
byteorder = "1.4"
num = { version = "0.2"}

crossbeam-channel = "0.3"

sled = "0.34"
# pagecache = "0.17"
reqwest = {version = "0.10", default-features = false, features = ["rustls-tls"]}

mpd = "0.1"
rand = "0.6"
retry = "1"

futures-util = "0.3.30"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-journald = "0.3.0"
log-panics = "2.1.0"
clap = { version = "4.5.2", features = ["derive"] }
