[package]
name = "ha-text-widget"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
clap.workspace = true
color-eyre = { workspace = true }
protocol = { workspace = true, features = ["alloc", "thiserror"] }
data-server = { workspace = true }
data-store = { workspace = true }
nucleo-matcher = "0.3.1"
tokio = { workspace = true}
gethostname = "0.5.0"

tracing.workspace = true
tracing-error.workspace = true
tracing-subscriber.workspace = true
dirs = "5.0.1"
serde = { version = "1.0.204", features = ["derive"] }
promptly = "0.3.1"
ron = "0.8.1"
