[package]
name = "ha-text-widget"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Widget for a desktop environment bar which displays sensor readings"

[dependencies]
clap.workspace = true
color-eyre = { workspace = true }
protocol = { workspace = true, features = ["alloc", "thiserror"] }
data-server = { workspace = true }
data-store = { workspace = true }
nucleo-matcher = "0.3.1"
tokio = { workspace = true}
gethostname.workspace = true

itertools.workspace = true
logger.workspace = true
tracing.workspace = true
tracing-error.workspace = true
tracing-subscriber.workspace = true
dirs = "6.0"
serde.workspace = true
promptly = "0.3.1"
ron.workspace = true
