[package]
name = "ui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "A tui app for viewing data from and controlling the home automation system"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = { workspace = true }
crossterm = "0.28"
hdrhistogram = "7.5"
ratatui = "0.29"
tui-tree-widget = { version = "0.23.0", git = "https://github.com/dvdsk/tui-rs-tree-widget" }
clap = { workspace = true }

tokio =  { workspace = true, features = ["macros"] }
logger = { workspace = true }
tracing.workspace = true
tracing-error = { workspace = true }
tracing-subscriber.workspace = true 

protocol = { workspace = true, features = ["alloc"] }
data-server = { workspace = true }
data-store = { workspace = true }
log-store = { workspace = true, features = ["api"] }
jiff = { workspace = true }
thiserror.workspace = true
itertools.workspace = true
gethostname.workspace = true
strip-ansi-escapes = "0.2.0"
indextree = "4.7.2"
derivative = "2.2.0"
