[package]
name = "usb-bridge"
version = "0.1.0"
rust-version = "1.78"
edition = "2021"
license = "GPLv3"
authors = ["David Kleingeld & Eva van Houten"]

[dependencies]
heapless = "0.8.0"

protocol = { workspace = true }
data-server = { workspace = true }
logger = { workspace = true }

tokio = { workspace = true }
clap = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-error = { workspace = true }
tracing = { workspace = true }
nusb = "0.1.10"
color-eyre.workspace = true
users = "0.11.0"
