[package]
name = "bed-sensors"
version = "0.2.0"
rust-version = "1.78"
edition = "2021"
license = "GPLv3"
authors = ["David Kleingeld & Eva van Houten"]

[dependencies]
embassy-stm32 = { version = "0.1.0", features = [ "defmt", "stm32f401cc",
"unstable-pac", "memory-x", "time-driver-tim9", "time", "exti" ]  }
embassy-sync = { version = "0.6.0", features = ["defmt"] }
embassy-executor = { version = "0.6.0", features = ["arch-cortex-m",
"executor-thread", "defmt", "integrated-timers", "executor-interrupt"] }
embassy-embedded-hal = { version = "0.2.0" }
embassy-time = { version = "0.3.2", features = ["defmt",
"defmt-timestamp-uptime-ms", "tick-hz-32_768"] }
embassy-futures = { version = "0.1.0"}
embassy-usb = { version = "0.3.0", features = ["defmt"] }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0"
embedded-hal-bus = { version = "0.2", features = ["async", "defmt-03"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
heapless = { version = "0.8", default-features = false }
nb = "1.0.0"
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
static_cell = "2.0.0"

# sensors
bosch-bme680 = { version = "1.0.2", path = "/home/david/Documents/async-bosch-bme680" }
max44009 = { version = "0.2", git = "https://github.com/dvdsk/max44009-rs" }
sht31 = { version = "0.3.0", git = "https://github.com/dvdsk/SHT31-rs", features = ["postcard"] }
mhzx = { version = "0.3.0", path = "/home/david/tmp/mh-zx-driver", features = ["serde", "postcard"] }
sps30-async = { version = "0.3.0", path = "/home/david/tmp/sps30", features = ["serde", "postcard"] }
nau7802-async = { path = "/home/david/tmp/nau7802-rs", features = ["serde", "postcard", "defmt"] }

# encoding
protocol = { path = "../../../crates/protocol" }

[patch.crates-io]
embassy-stm32 = {git = "https://github.com/embassy-rs/embassy", rev = "d7780fc" }
embassy-sync = {git = "https://github.com/embassy-rs/embassy", rev = "d7780fc" }
embassy-executor = {git = "https://github.com/embassy-rs/embassy", rev = "d7780fc" }
embassy-embedded-hal = {git = "https://github.com/embassy-rs/embassy", rev = "d7780fc" }
embassy-futures = {git = "https://github.com/embassy-rs/embassy", rev = "d7780fc" }
embassy-time = {git = "https://github.com/embassy-rs/embassy", rev = "d7780fc" }
embassy-time-driver = {git = "https://github.com/embassy-rs/embassy", rev = "d7780fc" }
embassy-time-queue-driver = {git = "https://github.com/embassy-rs/embassy", rev = "d7780fc" }
embassy-usb = {git = "https://github.com/embassy-rs/embassy", rev = "d7780fc" }

[profile.dev]
opt-level = "s"

[profile.release]
lto = "fat"
opt-level = "s"
incremental = false
codegen-units = 1
# note: debug = true is okay - debuginfo isn't flashed to the device!
debug = true
